small changes updated comments and small things

--- a/Project_ML.ipynb
+++ b/Project_ML.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "# test the model model with the depth chosen from above experiment\n",
+    "# test the model with the depth chosen from above experiment\n",
     "classificationTree = sklearn.tree.DecisionTreeClassifier(max_depth=4)\n",
     "\n",
     "classificationTree.fit(X_train, Y_train)\n",
@@ -799,7 +799,7 @@
     }
    ],
    "source": [
-    "# test the model model with the depth chosen from above experiment\n",
+    "# test the model model with the hyperparameters chosen from above experiment\n",
     "classificationTree = RandomForestClassifier(n_estimators=75, max_depth=16, max_samples=175)\n",
     "\n",
     "classificationTree.fit(X_train, Y_train)\n",
@@ -948,7 +948,7 @@
     }
    ],
    "source": [
-    "# test the model model with the depth chosen from above experiment\n",
+    "# test the model model with the hyperparameters chosen from the above experiment\n",
     "classificationTree = AdaBoostClassifier(n_estimators=4, learning_rate = 0.1 )\n",
     "\n",
     "classificationTree.fit(X_train, Y_train)\n",
@@ -1047,7 +1047,7 @@
     }
    ],
    "source": [
-    "# test the model model with the depth chosen from above experiment\n",
+    "# test the model model with the hyperparameter  chosen from above experiment\n",
     "classificationTree = sklearn.svm.SVC(kernel='linear', C=1, probability=True)\n",
     "\n",
     "classificationTree.fit(X_train, Y_train)\n",
@@ -1262,7 +1262,7 @@
     }
    ],
    "source": [
-    "# ensemble of differnt models with permutation\n",
+    "# ensemble of differnt models with permutation to check the best prediction\n",
     "\n",
     "permut = 4\n",
     "permutations = list(itertools.permutations(trained_models, permut))\n",
